--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,14 +3,18 @@
     <div class="branding">
       <a href="#" class="nav-link">
         <span class="clr-icon clr-clarity-logo"></span>
-        <span class="title">Clarity</span>
+        <span class="title">Movie Finder</span>
       </a>
     </div>
       <div class="header-nav" [clr-nav-level]="1">
           <a class="nav-link" href="#" [routerLink]="['/home']" routerLinkActive="active"><span class="nav-text">Home</span></a>
-          <a class="nav-link" href="#" [routerLink]="['/about']" routerLinkActive="active"><span class="nav-text">About</span></a>
+          <a class="nav-link" href="#" [routerLink]="['/movie']" routerLinkActive="active"><span class="nav-text">Movie Search</span></a>
+          <a class="nav-link" href="#" [routerLink]="['/favorites']" routerLinkActive="active"><span class="nav-text">Favorites</span></a>
+
       </div>
     <div class="header-actions">
+       <a class="nav-link" href="#" [routerLink]="['/login']" routerLinkActive="active"><span class="nav-text">Login</span></a>
+        <a class="nav-link" href="#" [routerLink]="['/register']" routerLinkActive="active"><span class="nav-text">Register</span></a>
     </div>
   </clr-header>
   <div class="content-container">
