--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -22,14 +22,16 @@
     <div></div>
    Email: <input class="email"
    type="text"
-   placeholder="email"
+   placeholder="Email"
    name="email"
    [(ngModel)]="user.email">
-   <p>
+   <p></p>
    Password: <input class="password"
    type="password"
    placeholder="password"
    [(ngModel)]="user.password">
+   <p>
+
 </p>
 </div>
 <p>
