--- a/src/app/favorites/favorites.component.html
+++ b/src/app/favorites/favorites.component.html
@@ -1,12 +1,12 @@
 <h3>Favorites</h3>
-<ol *ngIf="favorites">
+<!--<ol *ngIf="favorites">
     <li *ngFor="let movie of favorites">
         {{movie.title}}
         <img src="https://image.tmdb.org/t/p/w300_and_h450_bestv2/{{movie.poster_path}}">
-        <!-- Use cards/boxes from clarity for structure here-->
+        
     </li>
 </ol>
-
+-->
 
 <div class="row">
     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
@@ -20,7 +20,7 @@
                     <img src="https://image.tmdb.org/t/p/w300_and_h450_bestv2/{{movie.poster_path}}" class="card-media-image">
                     <div class="card-media-description">
                         <span class="card-media-title">
-                            {{movie.genre}}
+                            Rating: {{movie.vote_average}} / 10
                         </span>
                         <span class="card-media-text">
                             {{movie.release_date}}
@@ -33,10 +33,30 @@
               
             </div>
               <div class="card-footer">
-                <button class="btn btn-sm btn-link">Remove from Favorites</button>
+                <button class="btn btn-sm btn-link" (click)="deleteMovie(movie)">Remove from Favorites</button>
             </div>
                           </li>
             </ol>
           
         </div>
  </div>
+ 
+ <div class="row">
+    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+          <ol *ngIf="favorites">
+    <li *ngFor="let movie of favorites">
+        <a href="..." class="card clickable">
+            <div class="card-img">
+                <img src="https://image.tmdb.org/t/p/w300_and_h450_bestv2/{{movie.poster_path}}">
+            </div>
+            <div class="card-block">
+                <p class="card-text">
+                    
+                    {{movie.title}}
+                </p>
+            </div>
+        </a>
+        </ol>
+        </li>
+    </div>
+</div>
